--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "angular": "~1.3.15",
     "angular-route": "~1.3.15",
     "angular-resource": "~1.3.15",
-    "ng-file-upload": "*"
+    "ng-file-upload": "*",
+    "pure": "~0.6.0"
   }
 }
