--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "angular-route": "~1.3.15",
     "angular-resource": "~1.3.15",
     "ng-file-upload": "*",
-    "pure": "~0.6.0"
+    "pure": "~0.6.0",
+    "font-awesome": "~4.3.0"
   }
 }
