--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "angular-resource": "~1.3.15",
     "ng-file-upload": "*",
     "pure": "~0.6.0",
-    "font-awesome": "~4.3.0"
+    "font-awesome": "~4.3.0",
+    "less": "~2.5.1"
   }
 }
